Gap was fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -4,6 +4,7 @@
   align-items: center;
   grid-template-columns: repeat(4, 1fr);
   gap: 48px;
+  width: max-content;
   max-width: 944px;
   margin: 0 auto;
 
@@ -11,9 +12,12 @@
 
   @media (max-width: 1023px) {
     grid-template-columns: repeat(3, 1fr);
+    gap: 48px;
+
   }
   @media (max-width: 767px) {
     grid-template-columns: repeat(2, 1fr);
+    gap: 48px;
   }
   @media (max-width: 487px) {
     grid-template-columns: repeat(1, 1fr);
